@@ -7,6 +7,7 @@ Changelog
 
 Version 0.113
  Added:
+  - Now q4wine save last user selected prefix and dir;
   - Added "open directory" menu items via xdg-utils;
   - Added "open directory" menu items via winefile;
   - Added xdg-utils support (note: now it is in the depends list)
